# Calculator

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Calculator_lab1.cpp  Calculator_lab1.h  main.cpp  read_plugin.cpp  read_plugin.h
plugins/: cos.cpp  ln.cpp  sin.cpp  sqrt.cpp
